--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="Styles/style.css">
+    <link rel="stylesheet" href="Styles/style.css" />
   </head>
   <body>
     <header id="main-header">
@@ -25,7 +25,33 @@
           </li>
         </ul>
       </nav>
+      <a href="#side-drawer" class="menu-btn">
+        <span></span>
+        <span></span>
+        <span></span>
+      </a>
     </header>
+
+    <aside id="side-drawer">
+      <header>
+        <a href="#" class="menu-btn">
+          <span></span>
+          <span></span>
+          <span></span>
+        </a>
+      </header>
+
+      <nav>
+        <ul>
+          <li>
+            <a href="">Browse Meals</a>
+          </li>
+          <li>
+            <a href="">My Orders</a>
+          </li>
+        </ul>
+      </nav>
+    </aside>
 
     <main>
       <h1>Browse Our Delicious Meals</h1>
@@ -33,7 +59,10 @@
         <ul>
           <li class="food-item">
             <article>
-              <img src="/img/risotto.jpg" alt="Delicious risotto with tiger prawns" />
+              <img
+                src="/img/risotto.jpg"
+                alt="Delicious risotto with tiger prawns"
+              />
               <div class="food-item-content">
                 <h2>Risotto with Tiger Prawns</h2>
                 <a href="" class="btn">Add to Cart</a>
@@ -42,7 +71,10 @@
           </li>
           <li class="food-item">
             <article>
-              <img src="/img/cheeseburgers.jpg" alt="Classic cheeseburgers with fries" />
+              <img
+                src="/img/cheeseburgers.jpg"
+                alt="Classic cheeseburgers with fries"
+              />
               <div class="food-item-content">
                 <h2>Cheeseburgers</h2>
                 <a href="" class="btn">Add to Cart</a>
