Reduced image size and added meta description

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <meta
+      name="description"
+      content="This website suggest some food items with affordable price rate"
+    />
     <link rel="stylesheet" href="Styles/style.css" />
   </head>
   <body>
@@ -60,7 +64,7 @@
           <li class="food-item">
             <article>
               <img
-                src="/img/risotto.jpg"
+                src="/img/risotto.webp"
                 alt="Delicious risotto with tiger prawns"
               />
               <div class="food-item-content">
