--- a/index.html
+++ b/index.html
@@ -12,24 +12,31 @@
     />
     <meta
       name="description"
-      content="This website suggest some food items with affordable price rate"
+      content="This website suggest some food items with affordable price rates"
     />
     <link rel="stylesheet" href="Styles/style.css" />
   </head>
+
   <body>
     <header id="main-header">
-      <a href="index.html" id="logo">WebFood</a>
+      <a href="index.html" id="logo" aria-label="Go to WebFood page">WebFood</a>
       <nav>
         <ul>
           <li>
-            <a href="">Browse Meals</a>
+            <a href="" aria-label="Browse available meals">Browse Meals</a>
           </li>
           <li>
-            <a href="">My Orders</a>
+            <a href="" aria-label="View my orders">My Orders</a>
           </li>
         </ul>
       </nav>
-      <a href="#side-drawer" class="menu-btn">
+      <a
+        href="#side-drawer"
+        class="menu-btn"
+        role="button"
+        aria-label="open menu"
+        aria-expanded="false"
+      >
         <span></span>
         <span></span>
         <span></span>
@@ -38,7 +45,13 @@
 
     <aside id="side-drawer">
       <header>
-        <a href="#" class="menu-btn">
+        <a
+          href="#"
+          class="menu-btn"
+          role="button"
+          aria-label="Close side menu"
+          aria-expanded="true"
+        >
           <span></span>
           <span></span>
           <span></span>
@@ -48,10 +61,10 @@
       <nav>
         <ul>
           <li>
-            <a href="">Browse Meals</a>
+            <a href="" aria-label="Browse available meals">Browse Meals</a>
           </li>
           <li>
-            <a href="">My Orders</a>
+            <a href="" aria-label="View my orders">My Orders</a>
           </li>
         </ul>
       </nav>
@@ -59,29 +72,38 @@
 
     <main>
       <h1>Browse Our Delicious Meals</h1>
+
       <section id="latest-products">
         <ul>
-          <li class="food-item">
+          <li class="food-item" aria-label="food-item">
             <article>
               <img
                 src="/img/risotto.webp"
-                alt="Delicious risotto with tiger prawns"
+                alt="A plate of creamy risotto with tiger prawns on top"
               />
               <div class="food-item-content">
                 <h2>Risotto with Tiger Prawns</h2>
-                <a href="" class="btn">Add to Cart</a>
+                <a
+                  href=""
+                  class="btn"
+                  aria-label="Add Risotto with Tiger Prawns to cart"
+                  >Add to Cart</a
+                >
               </div>
             </article>
           </li>
-          <li class="food-item">
+
+          <li class="food-item" aria-label="food-item">
             <article>
               <img
                 src="/img/cheeseburgers.jpg"
-                alt="Classic cheeseburgers with fries"
+                alt="Two classic cheeseburgers with melted cheese, served with crispy fries"
               />
               <div class="food-item-content">
                 <h2>Cheeseburgers</h2>
-                <a href="" class="btn">Add to Cart</a>
+                <a href="" class="btn" aria-label="Add Cheeseburgers to cart"
+                  >Add to Cart</a
+                >
               </div>
             </article>
           </li>
