Reducd image sizes

--- a/index.html
+++ b/index.html
@@ -77,10 +77,13 @@
         <ul>
           <li class="food-item" aria-label="food-item">
             <article>
-              <img
-                src="/img/risotto.webp"
-                alt="A plate of creamy risotto with tiger prawns on top"
-              />
+              <picture>
+                <source srcset="Img/risotto.webp" />
+                <img
+                  src="/img/risotto.jpg"
+                  alt="A plate of creamy risotto with tiger prawns on top"
+                />
+              </picture>
               <div class="food-item-content">
                 <h2>Risotto with Tiger Prawns</h2>
                 <a
@@ -95,10 +98,13 @@
 
           <li class="food-item" aria-label="food-item">
             <article>
-              <img
-                src="/img/cheeseburgers.jpg"
-                alt="Two classic cheeseburgers with melted cheese, served with crispy fries"
-              />
+              <picture>
+                <source srcset="Img/cheeseburgers.webp" />
+                <img
+                  src="/img/cheeseburgers.jpg"
+                  alt="A plate of creamy risotto with tiger prawns on top"
+                />
+              </picture>
               <div class="food-item-content">
                 <h2>Cheeseburgers</h2>
                 <a href="" class="btn" aria-label="Add Cheeseburgers to cart"
